// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileThumbnail should render a normal-sized image 1`] = `
<div
  className="post-image normal"
  style={
    Object {
      "backgroundImage": "url(/api/v4/files/thumbnail_id/thumbnail)",
      "backgroundSize": "cover",
    }
  }
/>
`;

exports[`FileThumbnail should render a small image 1`] = `
<div
  className="post-image small"
  style={
    Object {
      "backgroundImage": "url(/api/v4/files/thumbnail_id/thumbnail)",
      "backgroundSize": "cover",
    }
  }
/>
`;

exports[`FileThumbnail should render an icon for a PDF 1`] = `
<div
  className="file-icon pdf"
/>
`;

exports[`FileThumbnail should render an icon for an SVG when SVG previews are disabled 1`] = `
<div
  className="file-icon generic"
/>
`;

exports[`FileThumbnail should render an svg when svg previews are enabled 1`] = `
<img
  alt="file thumbnail image"
  className="post-image normal"
  src="/api/v4/files/thumbnail_id"
/>
`;
